# LinGuinE

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
linguine/: config.py  constants.py  dataset_processor.py  metrics.py  propagator.py
linguine/disappearance_detectors/: __init__.py  detectors.py
linguine/image_loaders/: base_image_loader.py
linguine/inferers/: __init__.py  base_inferer.py  boosted_inferers.py  roi_inferer.py
linguine/prompt_selectors/: __init__.py  base_ps.py  metrics.py  threshold_ps.py  unguided_ps.py
linguine/registration/: landmark.py
linguine/registration/point_extractors/: __init__.py  abstract_extractor.py  csv_extractor.py
linguine/registration/registrators/: TPS_registrator.py  __init__.py  abstract_registrator.py  aruns_rigid_registrator.py  icon_registrator.py
linguine/study_segmentors/: __init__.py  base_segmentor.py  chain.py  from_one_tp.py
linguine/utils/: bounding_boxes.py  data.py  misc.py  pred_filtering.py  sampling.py
tests/: test_config.py  test_dataset_processor.py  test_dataset_processor_validation.py  test_metrics.py  test_propagator.py
tests/inferers/: test_boosted_inferers.py  test_roi_inferer.py
tests/prompt_selectors/: test_base_ps.py  test_metrics.py  test_threshold_ps.py  test_unguided_ps.py
tests/registration/: test_landmark.py  test_registrators.py
tests/registration/point_extractors/: test_abstract_and_csv_extractors.py
tests/study_segmentors/: __init__.py  test_base_segmentor.py  test_chain_segmentor.py  test_from_one_tp.py  test_use_as_source.py
tests/utils/: test_bounding_boxes.py  test_data.py
tutorials/: registration.ipynb
