[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linguine"
version = "0.0.2"
description = "Longitudinal Guidance Estimation for Volumetric Segmentation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nadine Garibli", email = "nadine.garibli@astrazeneca.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.5",
    "monai>=1.2.0",
    "pandas>=1.5.3",
    "requests>=2.32.3",
    "torch>=2.2.0",
    "nibabel>=3.1.1",
    "scipy>=1.11.0",
    "tqdm>=4.67.1",
    "omegaconf>=2.3.0",
    "SimpleITK>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit",
    "ruff",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["linguine*"]
exclude = ["tests*", "tutorials*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=linguine --cov-report=term-missing"

# Ruff configuration for linting and import sorting
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["B905", "E501", "C409", "C403", "C405", "C414", "C419"]  # ignore zip() without explicit strict= parameter and line too long

[tool.ruff.lint.isort]
known-first-party = ["linguine"]

# Ignore `E402` (import violations) in all `__init__.py`
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "I001", "I002", "F401"]
